# tauri_repro_test

./: .env.example  .gitignore  README.md  SECURITY_AUDIT.md  next.config.ts  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: layout.tsx  page.tsx
